# Chess_Teacher

./: LICENSE  README.md  TODO.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/Chess_teacher/: __init__.py  cli.py
src/chess_teacher/: __main__.py
src/chess_teacher/core/: game_controller.py
src/chess_teacher/engine/: stockfish_engine.py
src/chess_teacher/tools/: remove_background_pieces.py
src/chess_teacher/ui/: gui.py
tests/: __init__.py  test_Chess_teacher.py
